k8s/local/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: chicmoz
spec:
  ingressClassName: nginx
  rules:
    - host: dashboard.chicmoz.localhost
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
